# LurkWeb

./: Cargo.toml
backend/: Cargo.toml
backend/src/: listener.rs  main.rs  protocol.rs  routes.rs  session.rs
frontend/: App.jsx  app.jsx  index.html  style.css  utils.js
frontend/components/: CharacterModal.jsx  ConnectScreen.jsx  ContextMenu.jsx  EntityCard.jsx  GameView.jsx
src/: listener.rs  main.rs  protocol.rs  routes.rs  session.rs
