[package]
name = "LurkWeb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.10"
actix-rt = "2.11.0"
actix-web = "4.13.0"
lurk_lcsc = { version = "2.3.12", features = ["tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = [
    "fmt",
    "time",
    "tracing",
] }
uuid = { version = "1.21.0", features = ["v4"] }
